# aigc_metadata_tools

./: README.md
image/c_c++/: CMakeLists.txt  REDME.md  conanfile.txt  main.cpp
image/c_c++/demo/: CMakeLists.txt  exiv2_demo.cpp  libexif_demo.cpp  libexif_libjpeg_write_demo.cpp  libexif_read_demo.cpp  libpng_demo.cpp
image/c_c++/demo/libjpeg_for_libexif/: jpeg-data.c  jpeg-marker.c
image/py/: exif_read.py  exif_write.py  heif_read_write.py  png_chunk_read_write.py
test_resources/: .gitattributes  heic_exif_aigc.heic  heif_exif_aigc.heif  heif_exif_empty.heif
